Fix table overflow and add alt table row colors

--- a/src/docs/pages/component-docs/shared/scaffold/scaffold.component.scss
+++ b/src/docs/pages/component-docs/shared/scaffold/scaffold.component.scss
@@ -82,13 +82,15 @@
                 padding-left: 16px;
                 margin-bottom: 24px;
             }
-            table {
+            div {
+                width: 100%;
+                max-width: calc(100vw - 64px);
                 display: block;
-                overflow: auto;
+                margin-bottom: 24px;
+            }
+            table {
                 width: 100%;
                 box-sizing: border-box;
-                max-width: calc(100vw - 64px);
-                margin-bottom: 24px;
                 border-collapse: collapse;
             }
         }
